@@ -1,3 +1,8 @@
+2011-09-14 Alexander Malysh <amalysh at kannel.org>
+    *  doc/userguide/userguide.xml, gw/smsc/smsc_smpp.c, gwlib/cfg.def: applied
+       patch that allows setting of esm_class in SMPP module.
+       Thanks to Alan McNatty <alan at catalyst.net.nz> for the patch.
+
 2011-09-13  Stipe Tolj  <stolj at kannel.org>
     * gw/smsc/smsc_http.c: fixed double hex encoding for system type 'kannel'
       and 'no-sep = yes'. Due that we manipulate the msg->sms.[udh|msg]data
